--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,6 @@
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --branding-color: #aa745e;
+  --secondary-color: #fcedd0;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -47,20 +47,28 @@ p {
   line-height: 2;
   font-size: 24px;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section-content {
+.content {
   margin: 30px;
 }
-.about-section h1 {
-  font-size: 64px;
+.content h1 {
+  font-size: 55px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 24px;
+
+  font-family: var(--default-font-family);
+}
+.content p {
+  font-size: 14px;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -93,7 +101,7 @@ p {
   .hero {
     padding: 80px 20px;
   }
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
