--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,6 +27,37 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
+nav {
+  padding: 10px 0;
+}
+
+span {
+  font-family: var(--default-font-family);
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: var(--branding-color);
+  padding: 15px 15px;
+  border-radius: 50px;
+}
+nav ul {
+  padding-top: 10px;
+}
+nav li {
+  display: inline;
+  font-family: var(--default-font-family);
+  list-style: none;
+  margin-left: 30px;
+}
+nav a {
+  color: #272142;
+}
+
+nav a:hover,
+nav li.active a {
+  text-decoration: none;
+  color: var(--branding-color);
+}
 
 .hero {
   background: var(--secondary-color);
