--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,9 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+  font-size: 40px;
+}
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
@@ -57,6 +60,38 @@ nav a:hover,
 nav li.active a {
   text-decoration: none;
   color: var(--branding-color);
+}
+footer {
+  margin: 60px 0;
+}
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  color: black;
+  font-size: 24px;
+}
+footer .email-link:hover {
+  color: var(--branding-color);
+  text-decoration: none;
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--secondary-color);
+  padding: 10px 16px;
+  border-radius: 50%;
+  font-size: 20px;
+  transition: all 150ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
 }
 
 .hero {
@@ -116,6 +151,11 @@ nav li.active a {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  transition: all 150ms ease-in-out;
+}
+.btn-branding-outline:hover {
+  color: white;
+  background: var(--branding-color);
 }
 .project-description {
   padding: 70px 35px;
@@ -129,6 +169,7 @@ nav li.active a {
   h2 {
     font-size: 42px;
   }
+
   .hero {
     padding: 80px 20px;
   }
