--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,6 +64,14 @@ nav li.active a {
 footer {
   margin: 60px 0;
 }
+footer p a {
+  color: black;
+  text-decoration: none;
+}
+footer p a:hover {
+  color: var(--branding-color);
+  text-decoration: none;
+}
 footer .contact-box {
   background: var(--secondary-color);
   padding: 30px 120px;
@@ -97,7 +105,7 @@ footer .social-links a:hover {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 100px 20px;
 }
 
 .hero p {
@@ -114,7 +122,7 @@ footer .social-links a:hover {
   font-size: 24px;
 }
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .content {
   margin: 30px;
@@ -170,9 +178,6 @@ footer .social-links a:hover {
     font-size: 42px;
   }
 
-  .hero {
-    padding: 80px 20px;
-  }
   .content {
     text-align: center;
     padding: 0;
